--- a/application.properties
+++ b/application.properties
@@ -3,3 +3,4 @@ spring.application.name=mongodb-crud-app
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=mydatabase
 spring.data.mongodb.uri=mongodb://localhost:27017/mydatabase
+server.port=8085
